vertx kotlin compiler and property updates